# python-super-utils

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: example_combined.py  example_debug.py  example_logging.py
super_utils/: __init__.py  cython_builder.py  cython_optimizer.py  debug.py  logging.py  memory.py  system_spec.py  timing.py
super_utils/benchmarks/: __init__.py  base.py  branch.py  cython_branch.py  cython_interp.py  cython_linalg.py  cython_mfvep.py  cython_streaming.py  cython_wavelet.py  interp.py  linalg.py  mfvep_numpy.py  streaming.py  wavelet.py
super_utils/benchmarks/_cython/: __init__.py  branch.pyx  interp.pyx  linalg.pyx  mfvep_kernel.pyx  streaming.pyx  wavelet.pyx
super_utils/cli/: __init__.py  benchmark_cmd.py  cython_cmd.py  main.py  sysspec_cmd.py
